tests/invalid/undeclared-actor.coil
' @test invalid
' @error preparation
' @rule undeclared-participant
' @covers ACTORS, SEND
' @description Using @name without declaring in ACTORS

SEND
  FOR @analyst
  <<
  Check the data.
  >>
END
